--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -927,8 +927,8 @@
                                                                                                     .parallax2 {
                                                                                                         width: 100%;
                                                                                                         height: 500px;
-                                                                                                        opacity: 0.7;
-                                                                                                        background-image: url("../images/p4.jpg");
+                                                                                                        /* opacity: 0.7; */
+                                                                                                        background-image: url("../images/p4.png");
                                                                                                         background-size: 100% 100%;
                                                                                                         background-attachment: fixed;
                                                                                                     }
